--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p class="secP">abc,<span>abc</span>,abc</p>
 
         <a href="#Contact"><button class="btn">Contact</button></a>
-        <a href="/myCV.pdf" target="_blank"
+        <a href="/myCV.pdf" target="_blank" onclick= "window.open('myCV.pdf','_self');"
           ><button class="btn">Download Cv</button></a
         >
       </section>
